minor section updates

--- a/presentation/index.html
+++ b/presentation/index.html
@@ -41,7 +41,7 @@
         </section>
 
         <section data-state="squares-off theme dark"
-                 data-markdown="sections/pipeline_script.md"
+                 data-markdown="sections/jenkinsfile.md"
                  data-separator="^\n\n\n"
                  data-separator-vertical="^\n\n"
                  data-separator-notes="^Note:">
