remove complete Jenkinsfile example - leave for reference

--- a/presentation/index.html
+++ b/presentation/index.html
@@ -40,7 +40,14 @@
           </ul>
         </section>
 
-        <section data-state="squares-off theme dark"
+        <section data-state="squares-off theme"
+                 data-markdown="sections/preparation.md"
+                 data-separator="^\n\n\n"
+                 data-separator-vertical="^\n\n"
+                 data-separator-notes="^Note:">
+        </section>
+
+        <section data-state="squares-off theme"
                  data-markdown="sections/jenkinsfile.md"
                  data-separator="^\n\n\n"
                  data-separator-vertical="^\n\n"
