add basic pipeline components

--- a/presentation/index.html
+++ b/presentation/index.html
@@ -31,7 +31,7 @@
           <p><a style="color: inherit" href="https://jenkinsfile-example.firebaseapp.com/#/">https://jenkinsfile-example.firebaseapp.com/#/</a></p>
         </section>
 
-        <section data-state="squares-off theme dark sidebar">
+        <section data-state="squares-off theme sidebar">
           <h3>Tematy na dziś</h3>
           <ul>
             <li>Jenkinsfile - deklaracyjny pipeline</li>
@@ -54,7 +54,7 @@
                  data-separator-notes="^Note:">
         </section>
 
-        <section data-state="squares-off theme dark">
+        <section data-state="squares-off theme">
           <p style="font-size: 1.5em;"><a href="https://jenkinsfile-example.firebaseapp.com/#/">https://jenkinsfile-example.firebaseapp.com/#/</a></p>
           <pre style="display: none;">
             <code>&zsj;</code>
