fill in missing presentation sections

--- a/presentation/index.html
+++ b/presentation/index.html
@@ -54,6 +54,27 @@
                  data-separator-notes="^Note:">
         </section>
 
+        <section data-state="squares-off theme"
+                 data-markdown="sections/flow_config.md"
+                 data-separator="^\n\n\n"
+                 data-separator-vertical="^\n\n"
+                 data-separator-notes="^Note:">
+        </section>
+
+        <section data-state="squares-off theme"
+                 data-markdown="sections/flow_control.md"
+                 data-separator="^\n\n\n"
+                 data-separator-vertical="^\n\n"
+                 data-separator-notes="^Note:">
+        </section>
+
+        <section data-state="squares-off theme"
+                 data-markdown="sections/parallel.md"
+                 data-separator="^\n\n\n"
+                 data-separator-vertical="^\n\n"
+                 data-separator-notes="^Note:">
+        </section>
+
         <section data-state="squares-off theme">
           <p style="font-size: 1.5em;"><a href="https://jenkinsfile-example.firebaseapp.com/#/">https://jenkinsfile-example.firebaseapp.com/#/</a></p>
           <pre style="display: none;">
